Bug 242857 - Kdevelop supports neither thread_local nor __thread storage class
Summary: Kdevelop supports neither thread_local nor __thread storage class
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Language Support: CPP (old) (show other bugs)
Version: git master
Platform: Gentoo Packages Linux
: NOR minor
Target Milestone: 4.0.1
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-26 11:27 UTC by Gunther Piez
Modified: 2013-03-31 00:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gunther Piez 2010-06-26 11:27:16 UTC
Version:           SVN (using KDE 4.4.4) 
OS:                Linux

In the upcoming C++0x thread_local is specified as storage class for thread local storage, see http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2008/n2659.htm
Additionally, thread local storage exists in current compiler implementations as an extension "__thread", for example in gnu, HP, IBM, Intel and Sun compilers (not in Microsoft... ;-))
This is basically the same class of keywords as "static", for the exact semantics please see the link.

Reproducible: Always

Steps to Reproduce:
__thread int i;

Actual Results:  
__thread gets marked as an syntax error. Additionally, "i" is not recognized as a variable, and so subsequent parsing depending on "i" fails.


OS: Linux (x86_64) release 2.6.34
Compiler: x86_64-pc-linux-gnu-gcc
Comment 1 Gunther Piez 2011-08-20 09:54:05 UTC
Closing, both storage specifiers are accepted now.
Comment 2 Aleix Pol 2013-03-31 00:52:59 UTC
Moving all the bugs from the CPP Parser. It was not well defined the difference between it and C++ Language Support and people kept reporting in both places indistinctively