support thread_local in parser

BUG: 242857